--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
   "homepage": "https://github.com/mirkopezo/nft-erc721-from-scratch#readme",
   "dependencies": {
     "dotenv": "^10.0.0"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.2",
+    "hardhat": "^2.7.0"
   }
 }
